--- a/_modules/evmspec/data/uints.html
+++ b/_modules/evmspec/data/uints.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html class="writer-html5" lang="en">
+<html class="writer-html5" lang="en" data-content_root="../../../">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +12,9 @@
   
       <script src="../../../_static/jquery.js?v=5d32c60e"></script>
       <script src="../../../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js?v=b3ba4146"></script>
-      <script src="../../../_static/doctools.js?v=888ff710"></script>
-      <script src="../../../_static/sphinx_highlight.js?v=4825356b"></script>
+      <script src="../../../_static/documentation_options.js?v=5929fcd5"></script>
+      <script src="../../../_static/doctools.js?v=9bcbadda"></script>
+      <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" /> 
@@ -141,7 +141,9 @@
         <span class="k">return</span> <span class="n">new</span>
 
 
-<div class="viewcode-block" id="uint8"><a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.uint8">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">uint8</span><span class="p">(</span><span class="n">_UintData</span><span class="p">):</span>
+<div class="viewcode-block" id="uint8">
+<a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.uint8">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">uint8</span><span class="p">(</span><span class="n">_UintData</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Unsigned 8-bit integer.</span>
 
 <span class="sd">    Examples:</span>
@@ -154,7 +156,10 @@
     <span class="n">max_value</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="mi">2</span><span class="o">**</span><span class="n">bits</span> <span class="o">-</span> <span class="mi">1</span></div>
 
 
-<div class="viewcode-block" id="uint64"><a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.uint64">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">uint64</span><span class="p">(</span><span class="n">_UintData</span><span class="p">):</span>
+
+<div class="viewcode-block" id="uint64">
+<a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.uint64">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">uint64</span><span class="p">(</span><span class="n">_UintData</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Unsigned 64-bit integer.</span>
 
 <span class="sd">    Examples:</span>
@@ -167,7 +172,10 @@
     <span class="n">max_value</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="mi">2</span><span class="o">**</span><span class="n">bits</span> <span class="o">-</span> <span class="mi">1</span></div>
 
 
-<div class="viewcode-block" id="uint128"><a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.uint128">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">uint128</span><span class="p">(</span><span class="n">_UintData</span><span class="p">):</span>
+
+<div class="viewcode-block" id="uint128">
+<a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.uint128">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">uint128</span><span class="p">(</span><span class="n">_UintData</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Unsigned 128-bit integer.</span>
 
 <span class="sd">    Examples:</span>
@@ -178,6 +186,7 @@
     <span class="nb">bytes</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="mi">16</span>
     <span class="n">bits</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="nb">bytes</span> <span class="o">*</span> <span class="mi">8</span>
     <span class="n">max_value</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="mi">2</span><span class="o">**</span><span class="n">bits</span> <span class="o">-</span> <span class="mi">1</span></div>
+
 
 
 <span class="k">class</span><span class="w"> </span><span class="nc">uint256</span><span class="p">(</span><span class="n">_UintData</span><span class="p">):</span>
