--- a/_modules/evmspec/structs/header.html
+++ b/_modules/evmspec/structs/header.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html class="writer-html5" lang="en">
+<html class="writer-html5" lang="en" data-content_root="../../../">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +12,9 @@
   
       <script src="../../../_static/jquery.js?v=5d32c60e"></script>
       <script src="../../../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js?v=b3ba4146"></script>
-      <script src="../../../_static/doctools.js?v=888ff710"></script>
-      <script src="../../../_static/sphinx_highlight.js?v=4825356b"></script>
+      <script src="../../../_static/documentation_options.js?v=5929fcd5"></script>
+      <script src="../../../_static/doctools.js?v=9bcbadda"></script>
+      <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" /> 
@@ -76,7 +76,9 @@
 
 
 <span class="c1"># WIP - pretty sure this will fail right now</span>
-<div class="viewcode-block" id="ErigonBlockHeader"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.ErigonBlockHeader">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">ErigonBlockHeader</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<div class="viewcode-block" id="ErigonBlockHeader">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.ErigonBlockHeader">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">ErigonBlockHeader</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a block header in the Erigon client.</span>
 
@@ -183,6 +185,7 @@
 <span class="sd">        &gt;&gt;&gt; header.difficulty</span>
 <span class="sd">        uint(1000)</span>
 <span class="sd">    &quot;&quot;&quot;</span></div>
+
 </pre></div>
 
            </div>
