--- a/_modules/evmspec/structs/log.html
+++ b/_modules/evmspec/structs/log.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html class="writer-html5" lang="en">
+<html class="writer-html5" lang="en" data-content_root="../../../">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +12,9 @@
   
       <script src="../../../_static/jquery.js?v=5d32c60e"></script>
       <script src="../../../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js?v=b3ba4146"></script>
-      <script src="../../../_static/doctools.js?v=888ff710"></script>
-      <script src="../../../_static/sphinx_highlight.js?v=4825356b"></script>
+      <script src="../../../_static/documentation_options.js?v=5929fcd5"></script>
+      <script src="../../../_static/doctools.js?v=9bcbadda"></script>
+      <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" /> 
@@ -89,7 +89,9 @@
 <span class="n">_ADDRESS_TOPIC_PREFIX</span> <span class="o">=</span> <span class="n">HexBytes</span><span class="p">(</span><span class="s2">&quot;0&quot;</span><span class="p">)</span> <span class="o">*</span> <span class="mi">12</span>
 
 
-<div class="viewcode-block" id="Data"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Data">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">Data</span><span class="p">(</span><span class="n">HexBytes</span><span class="p">):</span>
+<div class="viewcode-block" id="Data">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Data">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">Data</span><span class="p">(</span><span class="n">HexBytes</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents data in Ethereum logs, providing utilities for interpreting</span>
 <span class="sd">    the data as various types. The data is assumed to be in hexadecimal format</span>
@@ -184,7 +186,10 @@
         <span class="k">return</span> <span class="n">uints</span><span class="o">.</span><span class="n">uint256</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="Topic"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Topic">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">Topic</span><span class="p">(</span><span class="n">HexBytes32</span><span class="p">,</span> <span class="n">Data</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Topic">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Topic">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">Topic</span><span class="p">(</span><span class="n">HexBytes32</span><span class="p">,</span> <span class="n">Data</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a topic in Ethereum logs, providing utilities for interpreting</span>
 <span class="sd">    the topic as various EVM types.</span>
@@ -192,6 +197,7 @@
 <span class="sd">    See Also:</span>
 <span class="sd">        :class:`Data` for more utilities on interpreting data.</span>
 <span class="sd">    &quot;&quot;&quot;</span></div>
+
 
 
 <span class="c1"># Dynamically define properties for all uint types.</span>
@@ -211,7 +217,9 @@
     <span class="nb">setattr</span><span class="p">(</span><span class="n">Topic</span><span class="p">,</span> <span class="sa">f</span><span class="s2">&quot;as_</span><span class="si">{</span><span class="n">uint_cls_name</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">,</span> <span class="nb">property</span><span class="p">(</span><span class="n">uint_cls</span><span class="p">))</span>
 
 
-<div class="viewcode-block" id="TinyLog"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.TinyLog">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">TinyLog</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<div class="viewcode-block" id="TinyLog">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.TinyLog">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">TinyLog</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a minimal log structure with topics.</span>
 
@@ -267,7 +275,10 @@
             <span class="k">raise</span> <span class="ne">AttributeError</span><span class="p">(</span><span class="n">new_err</span><span class="p">)</span> <span class="kn">from</span><span class="w"> </span><span class="kc">None</span></div>
 
 
-<div class="viewcode-block" id="SmallLog"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.SmallLog">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">SmallLog</span><span class="p">(</span><span class="n">TinyLog</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+
+<div class="viewcode-block" id="SmallLog">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.SmallLog">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">SmallLog</span><span class="p">(</span><span class="n">TinyLog</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a log with additional attributes for the contract address and data.</span>
 
@@ -282,7 +293,10 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Array of 32-bytes non-indexed return data of the log.&quot;&quot;&quot;</span></div>
 
 
-<div class="viewcode-block" id="Log"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Log">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">Log</span><span class="p">(</span><span class="n">SmallLog</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+
+<div class="viewcode-block" id="Log">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Log">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">Log</span><span class="p">(</span><span class="n">SmallLog</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a comprehensive log structure with additional transaction</span>
 <span class="sd">    details.</span>
@@ -312,7 +326,10 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">blockNumber</span></div>
 
 
-<div class="viewcode-block" id="FullLog"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.FullLog">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">FullLog</span><span class="p">(</span><span class="n">Log</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+
+<div class="viewcode-block" id="FullLog">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.FullLog">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">FullLog</span><span class="p">(</span><span class="n">Log</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a full log structure with comprehensive block and transaction</span>
 <span class="sd">    details.</span>
@@ -323,6 +340,7 @@
 
     <span class="n">blockHash</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">BlockHash</span><span class="p">]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The hash of the block where the transaction was included where the log originated from. `None` for pending transactions.&quot;&quot;&quot;</span></div>
+
 </pre></div>
 
            </div>
