--- a/_modules/evmspec/structs/receipt.html
+++ b/_modules/evmspec/structs/receipt.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html class="writer-html5" lang="en">
+<html class="writer-html5" lang="en" data-content_root="../../../">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +12,9 @@
   
       <script src="../../../_static/jquery.js?v=5d32c60e"></script>
       <script src="../../../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js?v=b3ba4146"></script>
-      <script src="../../../_static/doctools.js?v=888ff710"></script>
-      <script src="../../../_static/sphinx_highlight.js?v=4825356b"></script>
+      <script src="../../../_static/documentation_options.js?v=5929fcd5"></script>
+      <script src="../../../_static/doctools.js?v=9bcbadda"></script>
+      <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" /> 
@@ -90,7 +90,9 @@
 <span class="p">)</span><span class="o">.</span><span class="n">decode</span>
 
 
-<div class="viewcode-block" id="FeeStats"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.FeeStats">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">FeeStats</span><span class="p">(</span><span class="n">DictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<div class="viewcode-block" id="FeeStats">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.FeeStats">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">FeeStats</span><span class="p">(</span><span class="n">DictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Arbitrum includes this in the `feeStats` field of a tx receipt.</span>
 
 <span class="sd">    See Also:</span>
@@ -103,7 +105,10 @@
     <span class="n">l2Computation</span><span class="p">:</span> <span class="n">Wei</span></div>
 
 
-<div class="viewcode-block" id="ArbitrumFeeStats"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.ArbitrumFeeStats">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">ArbitrumFeeStats</span><span class="p">(</span><span class="n">DictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+
+<div class="viewcode-block" id="ArbitrumFeeStats">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.ArbitrumFeeStats">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">ArbitrumFeeStats</span><span class="p">(</span><span class="n">DictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Arbitrum includes these with a tx receipt.</span>
 
 <span class="sd">    See Also:</span>
@@ -123,6 +128,7 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The breakdown of gas prices for the transaction.&quot;&quot;&quot;</span></div>
 
 
+
 <span class="n">_decode_fee_stats</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="n">ArbitrumFeeStats</span><span class="p">]]</span> <span class="o">=</span> <span class="n">Decoder</span><span class="p">(</span>
     <span class="nb">type</span><span class="o">=</span><span class="n">ArbitrumFeeStats</span><span class="p">,</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">Wei</span><span class="o">.</span><span class="n">_decode_hook</span>
 <span class="p">)</span><span class="o">.</span><span class="n">decode</span>
@@ -138,7 +144,9 @@
         <span class="k">return</span> <span class="n">__em_call__</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="nb">int</span><span class="p">(</span><span class="n">hexstr</span><span class="p">,</span> <span class="mi">16</span><span class="p">),</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kw</span><span class="p">)</span>  <span class="c1"># type: ignore [arg-type]</span>
 
 
-<div class="viewcode-block" id="Status"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Status">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">Status</span><span class="p">(</span><span class="n">Enum</span><span class="p">,</span> <span class="n">metaclass</span><span class="o">=</span><span class="n">_HexStringToIntEnumMeta</span><span class="p">):</span>
+<div class="viewcode-block" id="Status">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Status">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">Status</span><span class="p">(</span><span class="n">Enum</span><span class="p">,</span> <span class="n">metaclass</span><span class="o">=</span><span class="n">_HexStringToIntEnumMeta</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Enum representing the status of a transaction, indicating success or failure.</span>
 
@@ -158,7 +166,10 @@
     <span class="n">success</span> <span class="o">=</span> <span class="mi">1</span></div>
 
 
-<div class="viewcode-block" id="TransactionReceipt"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.TransactionReceipt">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">TransactionReceipt</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="nb">dict</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+
+<div class="viewcode-block" id="TransactionReceipt">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.TransactionReceipt">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">TransactionReceipt</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="nb">dict</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents the receipt of a transaction within a block.</span>
 
 <span class="sd">    See Also:</span>
@@ -225,6 +236,8 @@
     <span class="n">_logs</span><span class="p">:</span> <span class="n">Raw</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;logs&quot;</span><span class="p">)</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The logs that were generated during this transaction.&quot;&quot;&quot;</span>
 
+<div class="viewcode-block" id="TransactionReceipt.logs">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.TransactionReceipt.logs">[docs]</a>
     <span class="nd">@cached_property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">logs</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="n">Log</span><span class="p">,</span> <span class="o">...</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;The logs that were generated during this transaction.</span>
@@ -233,7 +246,8 @@
 <span class="sd">            &gt;&gt;&gt; receipt.logs</span>
 <span class="sd">            (Log(...), Log(...))</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">_decode_logs</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_logs</span><span class="p">)</span>
+        <span class="k">return</span> <span class="n">_decode_logs</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_logs</span><span class="p">)</span></div>
+
 
     <span class="c1"># These fields are only present on Mainnet.</span>
     <span class="n">effectiveGasPrice</span><span class="p">:</span> <span class="n">Wei</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
@@ -314,6 +328,8 @@
     <span class="n">_feeStats</span><span class="p">:</span> <span class="n">Raw</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;feeStats&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="n">UNSET</span><span class="p">)</span>  <span class="c1"># type: ignore [assignment]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;This field is only present on Arbitrum.&quot;&quot;&quot;</span>
 
+<div class="viewcode-block" id="TransactionReceipt.feeStats">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.TransactionReceipt.feeStats">[docs]</a>
     <span class="nd">@cached_property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">feeStats</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ArbitrumFeeStats</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;This field is only present on Arbitrum.</span>
@@ -323,9 +339,13 @@
 <span class="sd">            ArbitrumFeeStats(...)</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">_decode_fee_stats</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_feeStats</span><span class="p">)</span></div>
+</div>
 
 
-<div class="viewcode-block" id="FullTransactionReceipt"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.FullTransactionReceipt">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">FullTransactionReceipt</span><span class="p">(</span><span class="n">TransactionReceipt</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+
+<div class="viewcode-block" id="FullTransactionReceipt">
+<a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.FullTransactionReceipt">[docs]</a>
+<span class="k">class</span><span class="w"> </span><span class="nc">FullTransactionReceipt</span><span class="p">(</span><span class="n">TransactionReceipt</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Extends :class:`TransactionReceipt` to include full details.&quot;&quot;&quot;</span>
 
     <span class="n">blockHash</span><span class="p">:</span> <span class="n">HexBytes</span>
@@ -343,6 +363,7 @@
 <span class="sd">        &gt;&gt;&gt; full_receipt.logsBloom</span>
 <span class="sd">        HexBytes(&#39;0x...&#39;)</span>
 <span class="sd">    &quot;&quot;&quot;</span></div>
+
 
 
 <span class="n">__em_call__</span> <span class="o">=</span> <span class="n">EnumMeta</span><span class="o">.</span><span class="fm">__call__</span>
