--- a/_modules/evmspec/structs/trace/create.html
+++ b/_modules/evmspec/structs/trace/create.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html class="writer-html5" lang="en">
+<html class="writer-html5" lang="en" data-content_root="../../../../">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +12,9 @@
   
       <script src="../../../../_static/jquery.js?v=5d32c60e"></script>
       <script src="../../../../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script data-url_root="../../../../" id="documentation_options" src="../../../../_static/documentation_options.js?v=b3ba4146"></script>
-      <script src="../../../../_static/doctools.js?v=888ff710"></script>
-      <script src="../../../../_static/sphinx_highlight.js?v=4825356b"></script>
+      <script src="../../../../_static/documentation_options.js?v=5929fcd5"></script>
+      <script src="../../../../_static/doctools.js?v=9bcbadda"></script>
+      <script src="../../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../../../genindex.html" />
     <link rel="search" title="Search" href="../../../../search.html" /> 
@@ -83,7 +83,9 @@
 <span class="n">logger</span> <span class="o">=</span> <span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="Action"><a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.create.Action">[docs]</a><span class="nd">@final</span>
+<div class="viewcode-block" id="Action">
+<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.create.Action">[docs]</a>
+<span class="nd">@final</span>
 <span class="k">class</span><span class="w"> </span><span class="nc">Action</span><span class="p">(</span>
     <span class="n">_ActionBase</span><span class="p">,</span>
     <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
@@ -113,7 +115,10 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The method used to create the contract.&quot;&quot;&quot;</span></div>
 
 
-<div class="viewcode-block" id="Result"><a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.create.Result">[docs]</a><span class="nd">@final</span>
+
+<div class="viewcode-block" id="Result">
+<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.create.Result">[docs]</a>
+<span class="nd">@final</span>
 <span class="k">class</span><span class="w"> </span><span class="nc">Result</span><span class="p">(</span>
     <span class="n">_ResultBase</span><span class="p">,</span>
     <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
@@ -146,7 +151,10 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The bytecode of the deployed contract.&quot;&quot;&quot;</span></div>
 
 
-<div class="viewcode-block" id="Trace"><a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.create.Trace">[docs]</a><span class="nd">@final</span>
+
+<div class="viewcode-block" id="Trace">
+<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.create.Trace">[docs]</a>
+<span class="nd">@final</span>
 <span class="k">class</span><span class="w"> </span><span class="nc">Trace</span><span class="p">(</span>
     <span class="n">_FilterTraceBase</span><span class="p">,</span>
     <span class="n">tag</span><span class="o">=</span><span class="s2">&quot;create&quot;</span><span class="p">,</span>
@@ -196,6 +204,8 @@
 <span class="sd">        - :attr:`action` for decoding this raw data.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
+<div class="viewcode-block" id="Trace.action">
+<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.create.Trace.action">[docs]</a>
     <span class="nd">@cached_property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">action</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Action</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Decodes the raw action data into an :class:`Action` object.</span>
@@ -215,7 +225,8 @@
             <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span>
                 <span class="sa">f</span><span class="s2">&quot;error decoding </span><span class="si">{</span><span class="n">json</span><span class="o">.</span><span class="n">decode</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_action</span><span class="p">)</span><span class="si">}</span><span class="s2"> into evmspec.structs.trace.create.Action&quot;</span>
             <span class="p">)</span>
-            <span class="k">raise</span>
+            <span class="k">raise</span></div>
+
 
     <span class="n">result</span><span class="p">:</span> <span class="n">Result</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The result object, adhering to the parity format, containing deployment details.</span>
@@ -227,6 +238,7 @@
 <span class="sd">    See Also:</span>
 <span class="sd">        - :class:`Result` for more details on the result structure.</span>
 <span class="sd">    &quot;&quot;&quot;</span></div>
+
 
 
 <span class="n">_decode_action</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="n">Action</span><span class="p">]]</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">Decoder</span><span class="p">(</span>
