--- a/_modules/evmspec/structs/trace/reward.html
+++ b/_modules/evmspec/structs/trace/reward.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html class="writer-html5" lang="en">
+<html class="writer-html5" lang="en" data-content_root="../../../../">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +12,9 @@
   
       <script src="../../../../_static/jquery.js?v=5d32c60e"></script>
       <script src="../../../../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script data-url_root="../../../../" id="documentation_options" src="../../../../_static/documentation_options.js?v=b3ba4146"></script>
-      <script src="../../../../_static/doctools.js?v=888ff710"></script>
-      <script src="../../../../_static/sphinx_highlight.js?v=4825356b"></script>
+      <script src="../../../../_static/documentation_options.js?v=5929fcd5"></script>
+      <script src="../../../../_static/doctools.js?v=9bcbadda"></script>
+      <script src="../../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../../../genindex.html" />
     <link rel="search" title="Search" href="../../../../search.html" /> 
@@ -81,7 +81,9 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">evmspec.structs.trace._base</span><span class="w"> </span><span class="kn">import</span> <span class="n">_ActionBase</span><span class="p">,</span> <span class="n">_FilterTraceBase</span>
 
 
-<div class="viewcode-block" id="Type"><a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.reward.Type">[docs]</a><span class="nd">@final</span>
+<div class="viewcode-block" id="Type">
+<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.reward.Type">[docs]</a>
+<span class="nd">@final</span>
 <span class="k">class</span><span class="w"> </span><span class="nc">Type</span><span class="p">(</span><span class="n">Enum</span><span class="p">,</span> <span class="n">metaclass</span><span class="o">=</span><span class="n">StringToIntEnumMeta</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents the types of rewards in Ethereum: block or uncle.</span>
 
@@ -101,7 +103,10 @@
     <span class="n">uncle</span> <span class="o">=</span> <span class="mi">1</span></div>
 
 
-<div class="viewcode-block" id="Action"><a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.reward.Action">[docs]</a><span class="nd">@final</span>
+
+<div class="viewcode-block" id="Action">
+<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.reward.Action">[docs]</a>
+<span class="nd">@final</span>
 <span class="k">class</span><span class="w"> </span><span class="nc">Action</span><span class="p">(</span>
     <span class="n">_ActionBase</span><span class="p">,</span>
     <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
@@ -132,7 +137,10 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The type of the reward.&quot;&quot;&quot;</span></div>
 
 
-<div class="viewcode-block" id="Trace"><a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.reward.Trace">[docs]</a><span class="nd">@final</span>
+
+<div class="viewcode-block" id="Trace">
+<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.reward.Trace">[docs]</a>
+<span class="nd">@final</span>
 <span class="k">class</span><span class="w"> </span><span class="nc">Trace</span><span class="p">(</span>
     <span class="n">_FilterTraceBase</span><span class="p">,</span>
     <span class="n">tag</span><span class="o">=</span><span class="s2">&quot;reward&quot;</span><span class="p">,</span>
@@ -177,6 +185,8 @@
     <span class="n">_action</span><span class="p">:</span> <span class="n">Raw</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;action&quot;</span><span class="p">)</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Raw data of the reward action, requires decoding to be useful.&quot;&quot;&quot;</span>
 
+<div class="viewcode-block" id="Trace.action">
+<a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.reward.Trace.action">[docs]</a>
     <span class="nd">@cached_property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">action</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Action</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Decodes the raw reward action into an :class:`Action` object, using parity style.</span>
@@ -195,6 +205,8 @@
 <span class="sd">            0x123</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">_decode_action</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_action</span><span class="p">)</span></div>
+</div>
+
 
 
 <span class="n">_decode_action</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="n">Action</span><span class="p">]]</span> <span class="o">=</span> <span class="n">Decoder</span><span class="p">(</span>
